fix variables, clean up css, make code more readable

--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -3,8 +3,9 @@
   --primary-highlight-1: #CE85FF;
   --primary-highlight-2: #DEADFF;
   --background-colour: #1E1E1E;
-  --background-highlight-1: #333333;
-  --background-highlight-2: #474747;
+  --background-highlight-1:#333333;
+  --background-highlight-2:#474747;
+  --background-highlight-3:#BBB;
   --text-colour: #FFFFFF;
   background: var(--background-colour);
   font-family: "roboto_condensed";
@@ -218,43 +219,6 @@
   width: 100%;
 }
 
-
-
-#spcontainer {
-  height:90%;
-  transform: translateX(-5vw);
-  position:relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.spplay-pause-btn {
-  position:absolute;
-  height: 80%;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  border: none;
-  background-color: #ffffff;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000000' d='M8 5v14l11-7z'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 60%;
-  transition: background-size 0.1s;
-
-  background-size: 60%;
-}
-.spplay-pause-btn.playing {
-  background-size: 90%;
-}
-.spsongCircle {
-  position:absolute;
-height: 100%;
-  aspect-ratio: 1;
-border-radius: 50%;
-background-color: purple;
-clip-path: polygon(0 0);
-}
 
 
 
